app/harbor/traefik.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: nginx-ingress-route
#   namespace: default
# spec:
#   entryPoints:
#     - web
#   routes:
#   - match: Host(`example.com`) && PathPrefix(`/nginx`)
#     kind: Rule
#     services:
#     - name: nginx-service
#       port: 80


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-route
  namespace: default
spec:
  rules:
    - host: nginx.suriya.com
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name:  nginx-service
                port:
                  number: 80
